CBI for MSRP and Style Number

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -162,6 +162,12 @@ EAN_UPC=GTIN
 #XFLD : WEIGHT Label
 WEIGHT=Weight
 
+#XFLD : STYLE_NUMBER Label
+STYLE_NUMBER=Style Number
+
+#XFLD : ARTICLE_MSRP_PRICE Label
+ARTICLE_MSRP_PRICE=MSRP
+
 #YMSG : reading article's details error message
 READ_ARTICLE_DETAILS_ERR_MSG=Could not retrieve product detail information
 
