--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -1,5 +1,3 @@
-
-
 # -------------------- APPLICATION --------------------
 
 #XTIT: this is the title of the application in the Launchpad
@@ -159,6 +157,12 @@ EAN_UPC=GTIN
 
 #XFLD : WEIGHT Label
 WEIGHT=Weight
+
+#XFLD : STYLE_NUMBER Label
+STYLE_NUMBER=Style Number
+
+#XFLD : ARTICLE_MSRP_PRICE Label
+ARTICLE_MSRP_PRICE=MSRP
 
 #YMSG : reading article's details error message
 READ_ARTICLE_DETAILS_ERR_MSG=Error reading product details
